--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
 
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
