--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
 
     implementation 'hyogeun.github.com.colorratingbar:ColorRatingBar:1.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.jcminarro:RoundKornerLayouts:0.3.1'
 
 }
