--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,18 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:screenOrientation="reversePortrait">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ProductListActivity" android:screenOrientation="reversePortrait"/>
-        <activity android:name=".activity.ProductDetailActivity" android:screenOrientation="reversePortrait">
+        <activity android:name=".activity.ProductListActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ProductDetailActivity" android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".activity.LoopingActivity" android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
