--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jcminarro:RoundKornerLayouts:0.3.1'
 
+    implementation project(':usbSerialForAndroid')
 }
